--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 body { 
     padding: 0;
     margin: 0;
-    display: grid; 
+    /* display: grid; 
     grid-template-areas: "header header" 
     "nav nav" 
     "main main"
@@ -10,10 +10,10 @@ body {
     /* PESSOAS, AQUI ESTÁ A ALTURA DE CADA ELEMENTO EM ORDEM, OU SEJA, 
     O GRID-TEMPLATE-ROWS ESTÁ DIZENDO QUE O HEADER TEM 65VH, A NAV 0VH(É MELHOR PQ EU POSSO MODIFICAR)
     E ASSIM EM DIANTE... */
-    grid-template-rows:100vh 0vh 100vh 100vh 10vh;
+    /* grid-template-rows:100vh 0vh 100vh 100vh 10vh; */
     
     /* GRID GAP CORRESPONDE AO ESPAÇO DE CADA ELEMENTO DA GRID */
-    grid-gap: 1rem; 
+    /* grid-gap: 1rem;  */
     box-sizing: border-box;
     overflow-x: hidden;
     font-family: 'ubuntu';    
@@ -22,14 +22,20 @@ body {
 
 
 .main-header {
-    grid-area: header; margin: 0;
+    /* grid-area: header;*/ 
+    display: flex;
+    flex-direction: column;
+    margin: 0; 
     padding: 0;  background-color: white;
+    height: 100vh;
 }
 
 .main-nav{
-    grid-area: nav; margin: 0;
+    display: flex;
+    /* grid-area: nav; */
+    margin: 0;
     padding: 0;
-    
+    height: 70px;
 }
 
 .main-nav img:hover{
@@ -39,33 +45,44 @@ body {
 }
 
 .main-section {
-    grid-area: section; background-color: white;
-    
+    display: flex;
+    /* grid-area: section;  */
+    background-color: white;
+    height: 100vh;
 }
 
 .main-content {
-    grid-area: main; 
-    
+    display: flex;
+    /* grid-area: main;  */
+    height: 100vh;
 }
 
 .main-depoimento {
-    grid-area: section; background-color: #eeeeee;
-    
+    display: flex;
+    flex-direction: column;
+    /* grid-area: section; */
+    background-color: #eeeeee;
+    height: 100vh;
 }
 
 .main-footer {
-    grid-area: footer; background-color: palegreen;
+    display: flex;
+    /* grid-area: footer;  */
+    background-color: palegreen;
+    height: 10vh;
     
 }
 
 
 
-/* RESPONSIVIDADE DA GRID */
 @media screen and (max-width: 768px) {
-    
-    body{
-        grid-template-areas: "header" "nav" "main" "section" "footer" ;
-    }
-    .main-content {flex-direction: column;
-    }
+
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 1200px) {
+
 }
